# qualiperf.github.io

./: .gitignore  README.md  _config.yml  news.html  persons.html  projects.html  publications.html  pyproject.toml
_data/: news.yml  persons.yml  projects.yml  publications.yml
assets/: news.yml  others.yml  persons.yml  preprints.yml  publications.bib  publications.yml  researchers.yml  videos.yml
assets/news/: qualiperf_news.xlsx  qualiperf_statistics.xlsx
assets/news/results/: qualiperf_statistics.xlsx
assets/persons/: Albadry.yml  Bafna.yml  Bartsch.yml  Buetow.yml  ChristB.yml  ChristM.yml  Dahmen.yml  Gerhaeusser.yml  Grzegorzewski.yml  Herrmann.yml  Hoepfl.yml  Kindler.yml  Koeller.yml  Koenig.yml  Kosacka.yml  Lambers.yml  LealPujol.yml  LealPujol_P3.yml  Mandl.yml  Mandl_P7.yml  Marz.yml  Marz_P4_PI.yml  Meyer.yml  Meyer_P4.yml  Radde.yml  Rauchfuss.yml  Rauchfuss_P9.yml  Reichenbach.yml  Reichenbach_P6_PI.yml  Ricken.yml  Ricken_P7_PI.yml  Schröter.yml  Schwen.yml  Settmacher.yml  Sibgatulin.yml  Sinden.yml  Sinden_P8.yml  Tautenhahn.yml  Tietze.yml  Zhao.yml  (+1 more)
src/: README.md  requirements.txt
src/data_processing/: log.py  news.py  news_statistics.py  persons.py  process_news.py  process_persons.py  process_yaml.py  report_template.html  update_data.py
src/data_processing/report/: qualiperf_report.html  report_template.html
