[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_processing"
version = "0.1.0"
description = "Proessing scripts for qualiperf achievements"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.4.2",
    "pyyaml>=6.0.1",
    "pydantic-yaml>=1.2.0",
    "rich>=13.5.3",
    "pydantic-yaml>=1.2.0",
    "pandas>=2.1.1",
    "openpyxl>=3.1.2",
    "matplotlib>=3.8.0",
    "jinja2>=3.1.2",
]
[tool.hatch.version]
path = "./src/data_processing/__init__.py"
